using System;
using System.Collections.Generic;
using System.Text;
using Microsoft.VisualStudio.TestTools.UnitTesting;

namespace SharedTest.Events.Queue.Strategy.SingleConsumer
{
    [TestClass]
    class UnboundedSingleConsumerChannelStrategy
    {
    }
}
